cmake_minimum_required(VERSION 4.1)
project(Ejemplos_en_clase)

set(CMAKE_CXX_STANDARD 20)

add_executable(ejemplo1 ejercicio1.cpp)
add_executable(ejemplo2 carp1/ejercicio2.cpp)
add_executable(ejemplo3 carp1/ejercicio3.cpp)
add_executable(ejemplo4 carp1/ejercicio4.cpp)
add_executable(ejemplo5 carp1/ejercicio5.cpp)
add_executable(ejemplo6 carp1/ejercicio6.cpp)